syntax="proto3";

package dataform;

option go_package = "github.com/dataform-co/dataform/protos/dataform";

message QueryEvaluationError {
  string message = 1;
  message ErrorLocation {
    int32 line = 1;
    int32 column = 2;
  }
  // will not be set if error_location can't be determined
  ErrorLocation error_location = 2;
}

message QueryEvaluation {
  enum QueryEvaluationStatus {
    SUCCESS = 0;
    FAILURE = 1;
  }
  QueryEvaluationStatus status = 1;
  QueryEvaluationError error = 2;
  bool incremental = 3;
  string query = 4;
}
